# znanie_hub

./: .gitignore  README.md  conftest.py  decorators.py  docker-compose.yml  pyproject.toml
config/: settings.py  urls.py
courses/: admin.py  forms.py  models.py  services.py  urls.py  views.py
courses/migrations/: 0001_initial.py  0002_section_topic.py  0003_topic_school_class.py  0004_topic_content_type_topic_text_content_and_more.py  0005_alter_topic_content_type.py  0006_alter_topic_content_type.py  0007_homework_delete_assignment.py  0008_remove_homework_config_remove_homework_description_and_more.py  0009_homeworkfile.py  0010_alter_homework_options.py  0011_homework_subject_homework_topic.py  0012_homework_section.py  0013_remove_homework_is_active_homework_is_completed.py  0014_homework_score.py  0015_remove_topic_content_type_and_more.py  0016_homework_include_site_theory.py  0017_alter_section_options_section_order_section_parent.py  0018_alter_section_description.py  0019_topic_order.py  0020_alter_topic_description.py  0021_alter_homework_options_homework_actual_score_and_more.py  0022_alter_homework_actual_score.py  0023_homework_status_homework_teacher_comment.py  0024_homeworkcomment.py  0025_alter_homework_managers_and_more.py  0026_alter_topic_options.py
courses/templates/: base.html  dashboard_teacher_add_hw.html  dashboard_teacher_detail_student.html  dashboard_teacher_index.html  edit_student.html  homework_view_detail.html  index.html  math_index.html  (+6 more)
other_pages/: apps.py  urls.py
users/: admin.py  forms.py  models.py  urls.py  views.py
(+41 files in other folders)
