[tool.poetry]
name = "znanie_hub"
version = "0.1.0"
description = "Platform for study math, physics and chemistry"
authors = ["Evgeniy Pivovarchi <eugene.pivovarchik@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.13"
django = "^6.0"
psycopg2-binary = "^2.9.11"
python-dotenv = "^1.2.1"
pillow = "^12.0.0"
dotenv = "^0.9.9"
django-bootstrap5 = "^26.1"

[tool.poetry.group.dev.dependencies]
pytest = "^9.0.2"
pytest-django = "^4.11.1"
pytest-factoryboy = "^2.8.1"
factory-boy = "^3.3.3"
black = "^25.12.0"
isort = "^7.0.0"
flake8 = "^7.3.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
